1) Have the "speed" button reflect change to refresh interval 2) Make drop down values human readable 3) Fix widths of buttons so don't jump around when changing values

--- a/static/main.css
+++ b/static/main.css
@@ -122,3 +122,10 @@ body {
   background-color: rgba(255,255,255,0.15);
 }
 
+#pause, #play {
+    width: 85px;
+}
+
+#speed {
+    width: 75px;
+}
